<resources>
    <string name="app_name" translatable="false">Newsreels</string>
    <string name="app_name_ver" translatable="false">Newsreels 2.0.7</string>
    <string name="facebook_app_id" translatable="false">623788458503686</string>
    <string name="facebook_client_token" translatable="false">2c1d6ac2b1e9ce5dea71162205b136e6</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb623788458503686</string>
    <string name="com_auth0_domain" translatable="false">nib.us.auth0.com</string>
    <string name="com_auth0_client_id" translatable="false">a5scsV7j86bluLrgtQ7yIfBSGFSZeJAp</string>
    <string name="server_client_id" translatable="false">709274277066-qp23852lug78mhknsd5al43uij9gf64l.apps.googleusercontent.com</string>
    <string name="auto2" translatable="false">Auto</string>
    <string name="dark2" translatable="false">Dark</string>
    <string name="light2" translatable="false">Light</string>
    <string name="picture_camera_roll_num" translatable="false">%1$s (%2$d)</string>
    <string name="picture_min_video_num" translatable="false">Video Selection Cannot%1$sNumber</string>
    <string name="picture_message_max_num" translatable="false">Select up to %1$s images</string>
    <string name="picture_message_audio_max_num" translatable="false">Select up to %1$s Audio</string>
    <string name="picture_message_video_max_num" translatable="false">Select up to %1$s Video</string>
    <string name="trans_image" translatable="false">trans_image</string>
    <string name="trans_title" translatable="false">trans_title</string>
    <string name="trans_desc" translatable="false">trans_desc</string>
    <string name="x_" translatable="false">X</string>
    <string name="pref_file" translatable="false">com.ziro.bullets.prefe</string>
    <string name="internet_error">Check Internet Connectivity!</string>
    <string name="search">Search</string>
    <string name="forex_market">Forex Market</string>
    <string name="read_more_">Read more</string>
    <string name="browser">Browse</string>
    <string name="for_you">For You</string>
    <string name="the_world_at">The world \nat your \nfingerprint \nanytime, \nanywhere</string>
    <string name="following">Following</string>
    <string name="account">Account</string>
    <string name="password_must_be_at_least_8_characters">Password must be atleast 8 characters</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="account_settings">Account settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="my_account">My Account</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="sources">Sources</string>
    <string name="topics_that_matter_to_you">Topics that matter to you</string>
    <string name="sources_that_deliver_your_news">Sources that deliver your news</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="remove">Remove</string>
    <string name="f">F</string>
    <string name="c">C</string>
    <string name="top_stories">Top Stories</string>
    <string name="top_news">Top News</string>
    <string name="network_error">Check your network settings and try again.</string>
    <string name="system_settings">Use native phone setting</string>
    <string name="your_password">Your Password</string>
    <string name="follow_3_to_continue">Follow 3 to continue</string>
    <string name="continuee">Continue</string>
    <string name="pick_topics_to_start_reading_and_saving_articles">Pick topics to start reading \nand saving articles</string>
    <string name="choose_channels_from_hundreds_of_different_sources">Choose source from hundreds of different sources</string>
    <string name="choose_locations_from_hundreds_of_different_locations">Choose place from hundreds of different places</string>
    <string name="next">Next</string>
    <string name="your_email">Your Email</string>
    <string name="auto">Auto</string>
    <string name="cancel">Cancel</string>
    <string name="search_topics">Search Topics…</string>
    <string name="search_sources">Search Sources</string>
    <string name="search_locations">Search Places</string>
    <string name="see_more_sources">see more sources</string>
    <string name="see_less_sources">see less sources</string>
    <string name="channel_name">Bullets</string>
    <string name="channel_description">Get Newsreels.</string>
    <string name="default_notification_channel_id">Bullets</string>
    <string name="block_list">Block List</string>
    <string name="unblock">Unblock</string>
    <string name="push_notification">Push Notification</string>
    <string name="notificaton_setting">Notificaton setting</string>
    <string name="see_more_topics">see more topics</string>
    <string name="see_less_topics">see less topics</string>
    <string name="help">Help</string>
    <string name="local">Places</string>
    <string name="international">International</string>
    <string name="follow_channel">Follow Source</string>
    <string name="copy_link">Copy Link</string>
    <string name="copy">Copy</string>
    <string name="save_story">Save Story</string>
    <string name="suggest_more_like_this">More like this</string>
    <string name="go_to_channel">Go to Source</string>
    <string name="block_channel">Block Source</string>
    <string name="report_a_concern">Report Concern</string>
    <string name="unfollowed">Unfollowed</string>
    <string name="followed">Followed</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="about_us">About</string>
    <string name="great_news_stories_are_everywhere_we_capture_the_gist_of_news_in_short_snappy_bullets_and_connect_you_with_your_favorite_publishers_bullets_is_the_first_of_its_kind_ai_generated_news_aggregator_app_that_delivers_meaningful_news_stories_in_a_handful_of_words_every_word_works_hard_for_its_living_and_enables_you_to_find_the_news_you_are_interested_in_from_hundreds_and_thousands_of_news_sources_you_can_also_get_news_from_your_regional_publishers_at_your_fingertips">Keeping updated about the news stories you love should not take too much of your time. Newsreels takes the regular 5-minute read and condense it into easily digestible bullets. Now, you can take in the same news in just a fraction of the time – so you can read more in less time.</string>
    <string name="read_more_in_less_time">Newsreels</string>
    <string name="help_center">Help Center</string>
    <string name="how_can">How can we help you?</string>
    <string name="content">It looks like you’re experiencing problems with our app. We are here to help so please get in touch with us</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_there">Hello there!</string>
    <string name="drop_msg">Drop us a message if you need help with something, we\'d love to hear from you!</string>
    <string name="msg">Message us,</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mesg">Message</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="there_is_nothing_in_here">There is nothing in here</string>
    <string name="looks_like_there_is_nothing_here_but_a_cat_would_you_like_to_go_back_to_home">Looks like there is nothing here but a cat. Would you like to go back to home?</string>
    <string name="you_have_reached_the_end">You have reached the end</string>
    <string name="there_is_no_more_article_left_only_a_ghost_would_you_like_to_refresh_the_page">There is no more article left, only a ghost. Would you like to refresh the page ?</string>
    <string name="home">Feed</string>
    <string name="view_mode">VIEW MODE</string>
    <string name="headlines_only">Headlines only</string>
    <string name="headlines_and_bullets">headlines and bullets</string>
    <string name="narrator">Narrator</string>
    <string name="extended_view">Extended View</string>
    <string name="list_view">List View</string>
    <string name="customize">Customize</string>
    <string name="reading_speed">Reading Speed</string>
    <string name="spark_your_curiosity">Fuel your curiosity</string>
    <string name="get_clutter_free_news_about_your">Get clutter-free news about your</string>
    <string name="favorite_topics_every_day_from">favorite topics from trusted sources</string>
    <string name="trusted_sources">around the world.</string>
    <string name="travel_far">Save time</string>
    <string name="hands_free_reading">Read the news in bullet form to</string>
    <string name="no_time_to_read_use_our">No time to read? Use our intuitive</string>
    <string name="text_to_speech_feature">text-to-speech feature.</string>
    <string name="skip">Skip</string>
    <string name="around_the_world_in_a_few_minutes">Read the news in bullet form to shorten a 5-minute read into just a few seconds.</string>
    <string name="continue_with_email_id">Continue With Email</string>
    <string name="learn_how_we_process_your_data">Learn how we process your data</string>
    <string name="share">Share</string>
    <string name="legal">Legal</string>
    <string name="edit_location">MANAGE PLACE</string>
    <string name="archive_article">Add to favorite</string>
    <string name="time_to_update">Time To Update!</string>
    <string name="we_added_lots_of_new_features">We added lots of new features and fix some bugs to make your experience as smooth as possible.</string>
    <string name="update_app">Update app</string>
    <string name="news_in_bullets">Newsreels</string>
    <string name="go_to_guardian">Go to</string>
    <string name="follow_guardian">Follow</string>
    <string name="block_guardian">Block reels from</string>
    <string name="suggest_less_like_this">I don\'t like this</string>
    <string name="report_sent">Report sent</string>
    <string name="language">Language</string>
    <string name="profile">Profile</string>
    <string name="articles">Articles</string>
    <string name="menu">Menu</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="youtube_article">YouTube Article</string>
    <string name="youtube_link_adding_dis">Paste a YouTube link to upload a video from YouTube.</string>
    <string name="paste_a_youtube_link_to_take_import">Paste a YouTube link to take import</string>
    <string name="str_import">Import</string>
    <string name="gallery">Gallery</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="topics">Topics</string>
    <string name="close">Close</string>
    <string name="let_s_start_with_your_email">Let’s start with your email</string>
    <string name="add_a_password">Add a password</string>
    <string name="password">Password</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="uppercase_letter">Uppercase letter</string>
    <string name="include_a_number">Include a number</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="reels">Reels</string>
    <string name="terms_and_condition"><![CDATA[Terms & conditions]]></string>
    <string name="notification">Notification</string>
    <string name="more_options">More Options</string>
    <string name="chat">Chat</string>
    <string name="delete_acc" translatable="false">Delete Account</string>
    <string name="del_acc_warning" translatable="false">Are you sure you want to delete your account? This will permanently erase your account</string>
    <string name="explore">Explore</string>
</resources>