<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet_new"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_extra_bold"
        android:text="@string/close"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/muli_extra_bold"
        android:text="@string/save"
        android:textColor="@color/theme_color_1"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/muli_extra_bold"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lang_list"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title" />

    <RelativeLayout
        android:id="@+id/gradient"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_below="@+id/title"
        android:background="@drawable/top_gradient" />

</RelativeLayout>