<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    android:fitsSystemWindows="true"
    tools:context=".mediapicker.gallery.PictureSelectorInstagramStyleActivity">

    <include layout="@layout/picture_title_bar" />


    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            style="@style/TabMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/home_bg"
            app:tabIndicatorColor="@color/primaryRed"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/title_bar_title"
            app:tabTextColor="@color/tabbar_text_unselected">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photos" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/videos" />

        </com.google.android.material.tabs.TabLayout>
    </LinearLayout>
</RelativeLayout>
