<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_a_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/let_s_start_with_your_email"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12sdp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/password"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12sdp" />

    <include
        android:id="@+id/edittextPasswordMain"
        layout="@layout/newsreels_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/error"
        android:textSize="@dimen/_8sdp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cond1_icon"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:src="@drawable/ic_password_checkmark"
            />

        <TextView
            android:id="@+id/cond1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/at_least_8_characters"
            android:textColor="@color/icon"
            android:textSize="@dimen/_8sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cond2_icon"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:src="@drawable/ic_password_checkmark"
            />

        <TextView
            android:id="@+id/cond2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/include_a_number"
            android:textColor="@color/icon"
            android:textSize="@dimen/_8sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cond3_icon"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:src="@drawable/ic_password_checkmark"
            />

        <TextView
            android:id="@+id/cond3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/uppercase_letter"
            android:textColor="@color/icon"
            android:textSize="@dimen/_8sdp" />

    </LinearLayout>


    <include
        android:id="@+id/continuePassword"
        layout="@layout/password_btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp" />

</LinearLayout>
